# Voksel

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  meson.build
content/base/scripts/: main.lua
res/shaders/: chunk.frag.glsl  chunk.vert.glsl  screen.fs.glsl  screen.vs.glsl  selection_box.fs.glsl  selection_box.vs.glsl  sky.fs.glsl  sky.vs.glsl
res/shaders/src/: box.frag.glsl  box.vert.glsl  chunk.frag.glsl  chunk.vert.glsl  chunk_solid.vert.glsl  chunk_transparent.vert.glsl  depth_reduce.comp.glsl  imgui.frag.glsl  imgui.vert.glsl  sky.frag.glsl  sky.vert.glsl  sort.comp.glsl  sort_indirect.comp.glsl  test.comp.glsl
src/: camera.cpp  camera.hpp  game.cpp  game.hpp  main.cpp  parallel_executor.hpp  player.cpp  player.hpp  serial_buffer.hpp  util.hpp  window.cpp  window.hpp
src/block/: block.cpp  block.hpp
src/client/: camera.cpp  camera.hpp  client.cpp  client.hpp  renderer.cpp  renderer.hpp  selection_box.cpp  selection_box.hpp  window.cpp  window.hpp
src/client/gl/: framebuffer.cpp  framebuffer.hpp  mesh.hpp  shader.cpp  shader.hpp
src/client/renderer/: box_renderer.cpp  box_renderer.hpp  chunk_mesh_builder.cpp  chunk_mesh_builder.hpp  chunk_renderer.cpp  chunk_renderer.hpp  common.hpp  context.cpp  context.hpp  imgui_impl_voksel.cpp  imgui_impl_voksel.hpp  persistent_buffer.cpp  persistent_buffer.hpp  pipeline.cpp  pipeline.hpp  queue_manager.cpp  queue_manager.hpp  renderer.cpp  renderer.hpp  sky_renderer.cpp  sky_renderer.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  vulkan_procs.cpp
src/client/world/: chunk_mesh_builder.cpp  chunk_mesh_builder.hpp  chunk_renderer.cpp  chunk_renderer.hpp  sky.cpp  sky.hpp
src/renderer/: box_renderer.cpp  box_renderer.hpp  chunk_mesh.hpp  chunk_mesh_builder.cpp  chunk_mesh_builder.hpp  chunk_renderer.cpp  chunk_renderer.hpp  common.hpp  context.cpp  context.hpp  depth_reducer.cpp  depth_reducer.hpp  descriptor.cpp  descriptor.hpp  imgui_impl_voksel.cpp  imgui_impl_voksel.hpp  persistent_buffer.cpp  persistent_buffer.hpp  pipeline.cpp  pipeline.hpp  queue_manager.cpp  queue_manager.hpp  renderer.cpp  renderer.hpp  sky_renderer.cpp  sky_renderer.hpp  sorter.cpp  sorter.hpp  storage_buffer.cpp  storage_buffer.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  timer_manager.cpp  timer_manager.hpp
src/scripting/: script_engine.cpp  script_engine.hpp
src/util/: util.hpp
src/world/: block_storage.cpp  block_storage.hpp  chunk.cpp  chunk.hpp  region.cpp  region.hpp  world.cpp  world.hpp  world_gen.cpp
